--- a/index.html
+++ b/index.html
@@ -1181,7 +1181,7 @@ section {
                     <input type="text" id="bugTags" class="form-input" placeholder="用逗号分隔，如: 网络,超时,配置">
                 </div>
                 <div class="modal-footer">
-                    <button type="button" class="btn-secondary" id="cancelBtn">取消</button>
+                    <button type="button" class="btn-reset" id="cancelBtn">取消</button>
                     <button type="submit" class="btn-primary">
                         <span>✓</span>
                         <span>提交</span>
