--- a/index.html
+++ b/index.html
@@ -902,8 +902,8 @@ section {
                     <li><a href="#home" class="nav-link active">首页</a></li>
                     <li><a href="#bugs" class="nav-link">BUG列表</a></li>
                     <li><a href="#products" class="nav-link">产品分类</a></li>
-                    <li><a href="#stats" class="nav-link">数据统计</a></li>
-                    <li><a href="#about" class="nav-link">关于</a></li>
+               <!-- <li><a href="#stats" class="nav-link">数据统计</a></li>
+                    <li><a href="#about" class="nav-link">关于</a></li> -->
                 </ul>
                 <button class="btn-primary" id="addBugBtn">
                     <span>➕</span>
